<resources>
    <string name="app_name">FREELA</string>
    <string name="titleLogin">Bem vindo</string>
    <string name="subTitleLogin">Digite suas credenciais.</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>


    <string name="menu_home">Inicio</string>
    <string name="menu_pedidos">Serviços</string>
    <string name="menu_chat">Chat</string>

    <string name="ola_usuario">Olá</string>
    <string name="projeto">Projetos</string>
    <string name="tatoou">Modelos de Tatoou</string>
    <string name="orcamento">Orçamento:</string>
    <string name="prazo">Prazo:</string>
    <string name="valor">R$:200,00</string>
    <string name="dias">7 dias</string>
    <string name="detalhes">ver detalhes</string>
    <string name="messageChatCliente">Adicione Pedidos, aceite propostas para que assim você possa conversar melhor sobre os detalhes.</string>
    <string name="messageChatFreelancer">Procure Pedidos, crie propostas para que assim você possa conversar melhor sobre os detalhes.</string>
    <string name="errorLoginNotFound">Email ou senha estão incorretos!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>