<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color01"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/backgroundprimary"
        app:cardCornerRadius="28dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:padding="28dp">

            <ImageView
                android:id="@+id/btnreturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:src="@drawable/arrowback" />

            <TextView
                style="@style/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleLogin"
                android:textColor="@color/color01"
                android:textStyle="bold"
                android:layout_marginBottom="12dp"/>

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/textsecondary"
                android:layout_height="wrap_content"
                android:text="@string/subTitleLogin"
                android:layout_marginBottom="20dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/textsecondary"
                app:errorTextColor="@color/error"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:drawableRight="@drawable/ic_email"
                    android:textColor="@color/textprimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:hintAnimationEnabled="true"
                app:hintTextColor="@color/textsecondary"
                app:errorTextColor="@color/error"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/senha"
                    android:maxLines="1"

                    android:textColor="@color/textprimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/errorMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingVertical="8sp"
                android:textColor="@color/error"
                android:textSize="18dp"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/entrar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="28dp"
                android:text="Entrar"
                app:cornerRadius="32dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="Não tem uma conta ?"
                    android:textColor="@color/textsecondary" />

                <TextView
                    android:id="@+id/redirect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="12dp"
                    android:text="Cadastro"
                    android:textColor="@color/textprimary"
                    android:textFontWeight="700" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>